Fix typo in unused preloads console message

Bug: 821170
Change-Id: I6ad4d15ce7fbf0f168527aaac4029654b6632dd3
Reviewed-on: https://chromium-review.googlesource.com/976186
Reviewed-by: Yoav Weiss <yoav@yoav.ws>
Commit-Queue: Erik Luo <luoe@chromium.org>
Cr-Commit-Position: refs/heads/master@{#545509}
Former-commit-id: d3c95fae0e7ccceda86d7b3bb1bf7a1910c52b07